--- a/src/app/dashboard/components/navbar/navbar.component.html
+++ b/src/app/dashboard/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <section class="">
-  <div class="row  justify-content-between align-items-start m-4 bg-secondary ">
-    <div class="col-8 bg-danger ">
+  <div class="row  justify-content-between align-items-start ">
+    <div class="col-8  ">
       <div class="input-group mb-3 ">
         <span class="input-group-text border-0 bg-white " id="basic-addon1">
           <i  class="fa-solid fa-search"></i>
