--- a/src/app/dashboard/components/sidebar/sidebar.component.html
+++ b/src/app/dashboard/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
   <ul>
     <li class="mb-2"  *ngFor="let item of menu">
      <ng-container *ngIf="item.isActive ">
-      <a [routerLink]="item.menuLink"  routerLinkActive="active" >
+      <a [routerLink]="item.menuLink"  routerLinkActive="" >
         <span class="p-1">  <i class=" fa-solid " [class]="item.icon"></i> </span>
          <span class="p-1" > {{item.title}}</span>
       </a>
