--- a/src/app/dashboard/components/home/home.component.html
+++ b/src/app/dashboard/components/home/home.component.html
@@ -1,2 +1,16 @@
-<p>home works!</p>
-<button class="btn "  (click)="userOrAdmin()">Admin Or User</button>
+<section>
+
+  <div class="page-title p-4 mt-3">
+    <div class="row align-items-center justify-content-between  ">
+      <div class="col-8 px-3">
+        <h3>Welcome <span> UpSkilling !</span></h3>
+        <p>This is a welcoming screen for the entry of the application , you can now see the options</p>
+      </div>
+      <div class="col-4 text-end">
+        <img src="../../../../assets/img/HOME.png" alt="cc" class="w-75">
+      </div>
+    </div>
+  </div>
+
+
+</section>
