--- a/src/app/dashboard/components/navbar/navbar.component.html
+++ b/src/app/dashboard/components/navbar/navbar.component.html
@@ -1,13 +1,30 @@
 <section class="">
-  <div class="row  justify-content-between align-items-start ">
-    <div class="col-8  ">
-      <div class="input-group mb-3 ">
-        <span class="input-group-text border-0 bg-white " id="basic-addon1">
-          <i  class="fa-solid fa-search"></i>
+
+  <div class=" row  justify-content-between align-items-center  m-2  mb-3 ">
+
+    <div class="col-7  ">
+
+      <div class="input-group   ">
+        <span class="input-group-text border-0 bg-white  rounded-start-pill px-2 py-1" id="basic-addon1">
+          <i class="fa-solid fa-magnifying-glass f"></i>
         </span>
-        <input type="text" class="form-control border-0" placeholder="Search Here" aria-label="Username" aria-describedby="basic-addon1">
+        <input type="text" class="form-control border-0  bg-white rounded-end-pill px-2 py-1"
+         placeholder="Search Here" aria-label="Username" aria-describedby="basic-addon1">
       </div>
+
      </div>
-    <div class="col-3"> </div>
+
+    <div class="col-3 text-end">
+      <div class="end-side  d-flex align-items-center justify-content-around">
+      <div>
+         <img src="../../../../assets/img/Ellipse34.svg" class="col-3" alt="">
+      <span class="px-2 ">UpSkilling</span>
+      </div>
+      <i class="fa-solid fa-caret-down"></i>
+      <i class="fa-solid fa-bell"></i>
+      </div>
+
+       </div>
   </div>
+
 </section>
