--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <!--   main layout --- navbar/sidebar/ admin or user -->
-<section  class="vh-100 w-100 overflow-hidden">
-  <div class="row ">
-  <div class="col-2"> <app-sidebar></app-sidebar>    </div>
-  <div class="col-9">
+<section  class="vh-100 w-100  ">
+  <div class="row m-0 ">
+  <div class="col-2  p-0"> <app-sidebar></app-sidebar>    </div>
+  <div class="col-9 ms-2 mt-2 ">
     <div class="">
        <app-navbar></app-navbar>
        <!-- Admin || User  -->
