--- a/src/app/dashboard/admin/modules/categories/components/add-category/add-category.component.html
+++ b/src/app/dashboard/admin/modules/categories/components/add-category/add-category.component.html
@@ -1,22 +1,24 @@
 <section>
-  <div class="container p-5 ">
+<div class="container px-4 py-2">
 
-  <div class="mat-dialog-title d-flex align-items-center justify-content-between ">
-    <h3> Category</h3>
-    <button class="bg-transparent"  (click)="onCloseDialog()" [mat-dialog-close]="data.name">
-      <mat-icon >close</mat-icon>
+  <div class="mat-dialog-title d-flex align-items-center justify-content-between m-2 py-3">
+    <h5> Category</h5>
+    <button class="bg-transparent"  (click)="onCloseDialog()"  [mat-dialog-close] >
+      <i class="fa-solid fa-xmark  close-icon "   ></i>
     </button>
   </div>
 
-  <div mat-dialog-content class="p-3">
-    <input type="text"  class="form-control w-100 "  [disabled]="data.isReadOnly"
+  <div mat-dialog-content class="py-3  px-1">
+    <input type="text"  class="form-control  w-100  rounded-pill "  [disabled]="data.isReadOnly"
     placeholder="Category Name" name="CategoryName" [(ngModel)]="data.name">
   </div>
 
-  <div class=" ms-auto p-3"  *ngIf="!data.isReadOnly">
+  <div class="line m-1 " ></div>
+
+  <div class="  text-end  p-3 pt-1"  *ngIf="!data.isReadOnly">
     <button  class="btn btn-success" [mat-dialog-close]="data">Save</button>
   </div>
 
-</div>
+ </div>
 
 </section>
