--- a/src/app/dashboard/components/delete-item/delete-item.component.html
+++ b/src/app/dashboard/components/delete-item/delete-item.component.html
@@ -3,7 +3,7 @@
   <div class="m-auto text-center position-relative p-1">
       <img src="../../../../assets/img/delete-img.svg" alt="xx" class="w-50">
       <button class="position-absolute top-0 end-0 bg-transparent"  matDialogClose  (click)=" onCloseDialog()">
-        <i class="fa-solid fa-xmark"   ></i>
+        <i class="fa-solid fa-xmark  close-icon "   ></i>
       </button>
 
 
