--- a/src/app/dashboard/admin/modules/categories/components/add-category/add-category.component.scss
+++ b/src/app/dashboard/admin/modules/categories/components/add-category/add-category.component.scss
@@ -1,11 +1,3 @@
-.material-icons
-{
-  width: 25px;
-  height: 25px;
-  border: 2px solid red ;
-  color: red;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+.line{
+  border: 3px solid rgba(247, 247, 247, 1) ;
+ }
