--- a/src/app/dashboard/components/delete-item/delete-item.component.html
+++ b/src/app/dashboard/components/delete-item/delete-item.component.html
@@ -10,7 +10,7 @@
   </div>
 
   <div mat-dialog-content class=" m-auto text-center  w-75">
-    <h4 matDialogTitle>Delete This Category ? </h4>
+    <h4 matDialogTitle>Delete This Item ? </h4>
     <p>are you sure you want to delete this item ? if you are sure just click on delete it</p>
   </div>
 
