--- a/src/app/dashboard/components/sidebar/sidebar.component.scss
+++ b/src/app/dashboard/components/sidebar/sidebar.component.scss
@@ -1,7 +1,8 @@
 section{
   background-color:#1F263E ;
   border-top-right-radius: 5.3rem;
-  height: 100vh;
+   height: 100%;
+   
   ul{
     list-style: none;
     padding: 0;
