--- a/src/app/dashboard/admin/modules/recipes/components/add-edit-recipes/add-edit-recipes.component.scss
+++ b/src/app/dashboard/admin/modules/recipes/components/add-edit-recipes/add-edit-recipes.component.scss
@@ -1,7 +1,6 @@
 section{
   .text-content{
-    background-color: #5fff2f38;
+    background-color: rgba(240, 255, 239, 1);
     border-radius: 16px;
-   
   }
 }
