--- a/src/app/dashboard/components/home/home.component.html
+++ b/src/app/dashboard/components/home/home.component.html
@@ -13,4 +13,16 @@
   </div>
 
 
+  <div class="text-content d-flex align-items-center justify-content-between p-3 mb-4 my-3">
+    <div class="col-md-8">
+      <h6>Fill The <span class="text-success"> Recipe</span> !</h6>
+      <p>you can now fill the meals easily using the table and form , click here and sill it with the table !</p>
+    </div>
+    <button class=" primary-color "  routerLink="/dashboard/admin/recipes">
+      Fill Recipes
+     <i class="fa fa-arrow-right ms-2" ></i>
+    </button>
+  </div>
+
+
 </section>
