--- a/src/app/dashboard/components/sidebar/sidebar.component.scss
+++ b/src/app/dashboard/components/sidebar/sidebar.component.scss
@@ -2,11 +2,16 @@ section{
   background-color:#1F263E ;
   border-top-right-radius: 5.3rem;
    height: 100%;
-   
+   min-height: 100vh;
+
+  
+
   ul{
     list-style: none;
     padding: 0;
+  }
     li{
+    list-style: none;
       margin: 0;
       padding: 0px;
     a{
@@ -14,6 +19,7 @@ section{
       text-decoration: none;
      color: #fff;
      padding: 6px;
+     cursor: pointer;
      }
     }
   }
@@ -28,7 +34,11 @@ section{
       background-color: #009247;
       top: 0px;
       left: 0px;
-    }
+
+  }
+
+  .logo{
+    cursor: pointer;
   }
 
 
