--- a/src/app/dashboard/user/user-recipes/user-recipes.component.html
+++ b/src/app/dashboard/user/user-recipes/user-recipes.component.html
@@ -1,28 +1,6 @@
-<section class="">
+<p>user-recipes works!</p>
+<section>
 
-  <div class="page-title ">
-    <div class="row align-items-center justify-content-between p-2">
-      <div class="col-8 px-3">
-        <h3>Recipes <span> item</span></h3>
-        <p>You can now add your items that any user can order it from the Application and you can edit</p>
-      </div>
-      <div class="col-4 text-end">
-        <img src="../../../../../../../assets/img/eating-avatar.svg" alt="cc" class="col-5">
-      </div>
-    </div>
-  </div>
-
-  <div class=" page-content  p-4">
-    <div class="row align-items-center justify-content-between  ">
-      <div class="col-8 ">
-        <p class="p-0 m-0">Recipes Table Details</p>
-        <span class="px-2">You can check all details</span>
-      </div>
-      <div class="col-4 text-end">
-         <button class=" primary-color" routerLink="addRecipe">Add New Recipe</button>
-         </div>
-    </div>
-  </div>
 
   <div class="search-area">
     <div class="d-flex align-items-center justify-content-between ">
@@ -55,47 +33,47 @@
         </mat-select>
       </mat-form-field>
 
-
-
       <button class=" primary-color p-2 mb-4 ms-2" (click)="clearFilters()">Clear Filter </button>
-
-
-
-
-
 
     </div>
   </div>
-<!-- 
-  <div  *ngIf="showNoData" >
+
+
+  <!-- <div  *ngIf="showNoData" >
      <app-no-data></app-no-data>
   </div> -->
+
 
   <table *ngIf="!showNoData"  class=" w-100 table table-striped text-center ">
 
     <thead class=" ">
       <th>Name</th>
-      <th>Image</th>
       <th>Price</th>
-      <th>Description</th>
+     <th>Image</th>
       <th>Tag</th>
       <th>category</th>
+      <th> CreationDate </th>
+      <th>ModificationDate </th>
+
       <th>Actions</th>
     </thead>
     <tbody>
       <tr  *ngFor="let recipe of recipesList" >
         <td>{{recipe.name  }}</td>
-        <td class=" px-0 mx-0" >
-           <img *ngIf="recipe.imagePath"  [src]="baseUrl+recipe.imagePath" alt="xx" class="col-2  px-0 mx-0">
-         </td>
         <td>{{recipe.price }}</td>
-        <td>{{recipe.description }}</td>
+        <td class=" w-25" >
+           <img *ngIf="recipe.imagePath"  [src]="baseUrl+recipe.imagePath" alt="xx" class="w-25">
+         </td>
+
         <td>{{recipe.tag.name}}</td>
         <td>
          <ng-container *ngFor="let category of recipe.category">
           {{category.name}}
          </ng-container>
         </td>
+
+        <td>{{recipe.creationDate | date :'dd-MM-yyyy '}}</td>
+        <td>{{recipe.modificationDate | date :'dd-MM-yyyy '}}</td>
 
         <td>
           <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
@@ -108,16 +86,12 @@
               <span>View</span>
             </button>
 
-            <button mat-menu-item
-             [routerLink]="['view-edit/' , recipe.id]" >
-              <mat-icon >edit_square</mat-icon>
-              <span>Edit </span>
+            <button mat-menu-item (click)="onAddToFav(recipe.id)" >
+              <mat-icon >favorite</mat-icon>
+              <span>Add to Fav </span>
             </button>
 
-            <button mat-menu-item  (click)="onOpenDeleteDialog(recipe.id)">
-              <mat-icon>delete</mat-icon>
-              <span>Delete</span>
-            </button>
+
           </mat-menu>
 
         </td>
@@ -126,6 +100,7 @@
     </tbody>
 
   </table>
+
 
   <mat-paginator *ngIf="!showNoData"  (page)="handelPageEvent($event)"
                 [length]="length"
@@ -137,4 +112,6 @@
 
 
 
-  </section>
+
+
+</section>
