--- a/src/app/dashboard/components/change-password/change-password.component.html
+++ b/src/app/dashboard/components/change-password/change-password.component.html
@@ -13,7 +13,7 @@
             <span class="text-muted fw-light pt-0 mt-0">  Please enter your details</span>
           </div>
 
-          <form  class="p-2" [formGroup]="changePasswordForm"  (ngSubmit)="sendData(changePasswordForm)" >
+          <form  class="p-2" [formGroup]="changePasswordForm"  (ngSubmit)="onOpenChangePassword(changePasswordForm)" >
 
             <div class="input-group mb-3 ">
               <span class="input-group-text   border-top-0 border-bottom-0 border-start-0 "
