--- a/src/app/auth/component/auth/auth.component.html
+++ b/src/app/auth/component/auth/auth.component.html
@@ -40,7 +40,7 @@
               placeholder="Password"
               aria-label="Password"
               aria-describedby="basic-addon1">
-              
+
               <a (click)="( isHide =! isHide )" class="input-group-text border-0">
                <span class=" me-1 border-0" id="basic-addon1">
                 <i  class="fa-regular " [class]=" isHide? 'fa-eye-slash' : 'fa-eye'"></i>
@@ -53,7 +53,7 @@
 
           <div class=" d-flex justify-content-between align-items-center p-2">
             <a routerLink="register">Register Now  ?</a>
-            <a routerLink="" class="second-link">Forget Password ?</a>
+            <a routerLink="forget" class="second-link">Forget Password ?</a>
           </div>
 
           <div class="text-center p-2">
