--- a/src/app/dashboard/components/navbar/navbar.component.html
+++ b/src/app/dashboard/components/navbar/navbar.component.html
@@ -32,14 +32,24 @@
 
           <button mat-menu-item routerLink="profile" >
             <mat-icon>visibility</mat-icon>
-            <span>View My Profile</span>
+            <span> Profile</span>
+          </button>
+
+          <button mat-menu-item (click)="onOpenChangePasswordDialog()">
+            <mat-icon>lock</mat-icon>
+            <span>Change Password</span>
+          </button>
+
+          <button mat-menu-item (click)="logOut()" >
+            <mat-icon>logout</mat-icon>
+            <span>LogOut</span>
           </button>
 
   <!-- [routerLink]="['view-edit/' , recipe.id]" -->
-          <button mat-menu-item  >
+          <!-- <button mat-menu-item  >
             <mat-icon >edit_square</mat-icon>
             <span>Edit </span>
-          </button>
+          </button> -->
 
         </mat-menu>
       </div>
