--- a/src/app/dashboard/components/sidebar/sidebar.component.html
+++ b/src/app/dashboard/components/sidebar/sidebar.component.html
@@ -1,37 +1,57 @@
-<section class="pt-2 "   [class.fa-2x]="isHideText" [class.text-center]="isHideText"   >
-  <div (click)="onHide()" class="logo p-0 m-0 " >
-  <img src="../../../assets/img/logosidear.png" alt="xx" class="w-75">
+<section class="pt-2 " [class.fa-2x]="isSidebarClick" [class.text-center]="isSidebarClick"  >
+
+  <!-- [class.fa-2x]="isHideText" [class.text-center]="isHideText" -->
+
+  <div  class="logo  "
+  (click)="toggleSidebarWidth() " >
+  <img src="../../../assets/img/logosidear.png" alt="xx" class="" [class]="isSidebarClick? 'col-12' :'w-75'">
   </div>
 
-  <ul>
-    <li class="mb-2 "  *ngFor="let item of menu">
-     <ng-container *ngIf="item.isActive ">
+  <ul >
+
+    <li class="mb-2 " >
+      <ng-container >
+       <a routerLink="home"  routerLinkActive="" >
+         <span class="p-1 ">  <i class=" fa-solid fa-home"  ></i> </span>
+          <span class="p-1 " *ngIf="!isSidebarClick" > Home </span>
+       </a>
+     </ng-container>
+     </li>
+
+
+    <li class="mb-2 "  *ngFor="let item of menu" class="">
+     <ng-container  *ngIf="menu">
       <a [routerLink]="item.menuLink"  routerLinkActive="" >
         <span class="p-1 ">  <i class=" fa-solid " [class]="item.icon" ></i> </span>
-         <span class="p-1 " *ngIf="!isHideText" > {{item.title}}</span>
+         <span class="p-1 " *ngIf="!isSidebarClick" > {{item.title}}</span>
       </a>
     </ng-container>
     </li>
-  </ul>
+
+
+
 
 
   <li >
-    <ng-container  *ngIf="isAdmin()">
-      <a  routerLinkActive="" (click)="onOpenChangePasswordDialog()" >
+    <ng-container  *ngIf="isAdmin">
+      <a   (click)="onOpenChangePasswordDialog()" >
         <span class="p-1 ">  <i class=" fa-solid fa-unlock-keyhole"  ></i> </span>
-         <span class="p-1 " *ngIf="!isHideText" > Change Password</span>
+         <span class="p-1 " *ngIf="!isSidebarClick" > Change Password</span>
       </a>
     </ng-container>
   </li>
 
 
   <li>
-    <ng-container *ngIf="isAdmin()">
-      <a  routerLinkActive=""  routerLink="/auth" >
+    <ng-container *ngIf="isAdmin">
+      <a  routerLinkActive=""  (click)="logOut()" >
         <span class="p-1 ">  <i class=" fa-solid fa-right-from-bracket"  ></i> </span>
-         <span class="p-1 " *ngIf="!isHideText" > LogOut</span>
+         <span class="p-1 " *ngIf="!isSidebarClick" > LogOut</span>
       </a>
     </ng-container>
   </li>
+
+  </ul>
+
 
 </section>
