--- a/src/app/dashboard/components/sidebar/sidebar.component.scss
+++ b/src/app/dashboard/components/sidebar/sidebar.component.scss
@@ -4,16 +4,14 @@ section{
    height: 100%;
    min-height: 100vh;
 
-  
-
   ul{
     list-style: none;
     padding: 0;
-  }
+
     li{
     list-style: none;
-      margin: 0;
-      padding: 0px;
+    margin: 0;
+     padding: 0px;
     a{
       display: block;
       text-decoration: none;
@@ -33,11 +31,10 @@ section{
       width: 5px;
       background-color: #009247;
       top: 0px;
-      left: 0px;
+      left: 0px; }
+    }
 
-  }
-
-  .logo{
+.logo{
     cursor: pointer;
   }
 
