--- a/src/app/dashboard/components/navbar/navbar.component.html
+++ b/src/app/dashboard/components/navbar/navbar.component.html
@@ -40,7 +40,7 @@
             <span>Change Password</span>
           </button>
 
-          <button mat-menu-item (click)="logOut()" >
+          <button mat-menu-item (click)=" onOpenLogOutDialog()" >
             <mat-icon>logout</mat-icon>
             <span>LogOut</span>
           </button>
