--- a/src/app/dashboard/user/user-recipes/components/view-recipe/view-recipe.component.scss
+++ b/src/app/dashboard/user/user-recipes/components/view-recipe/view-recipe.component.scss
@@ -3,40 +3,19 @@
 .line{
   border: 3px solid rgba(247, 247, 247, 1) ;
  }
-.fav-btn {
-  border: 1px solid rgba(0, 146, 71, 1);
-}
-//   span{
 
-//     font-weight: 400;
-//     font-size: 18px;
-//     color: #DFE0E0;
-//   }
-// }
-//   .page-content{
-//      p{
-//     color: #1F263E;
-//     font-weight: 500;
-//     font-size: 20px;
-//     line-height: 6px;
-//     }
-//   span{
-//     color: #323C47;
-//     font-weight: 400;
-//     font-size: 10px;
-//   }
-//   }
+  span{
+    font-weight: 400;
+    font-size: 18px;
+    color: #323C47;
+  }
+
+     p{
+    color: #1F263E;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 6px;
+    }
 
 
-//   .item{
-//     .fav-details{
-//       color: #323c47d8;
-//       font-size: 16px;
-//       font-weight: 400;
-//     }
-//     i{
-//       color: #009247;
-//       cursor: pointer;
-//     }
-//   }
 }
