--- a/src/app/dashboard/admin/modules/categories/components/list-categories/list-categories.component.html
+++ b/src/app/dashboard/admin/modules/categories/components/list-categories/list-categories.component.html
@@ -1,6 +1,6 @@
 <section class="">
 
-<div class="page-title ">
+<div class="page-title p-3">
   <div class="row align-items-center justify-content-between ">
     <div class="col-8 px-3">
       <h3>Categories <span> item</span></h3>
