--- a/src/app/dashboard/user/user-recipes/components/user-recipe/user-recipes.component.html
+++ b/src/app/dashboard/user/user-recipes/components/user-recipe/user-recipes.component.html
@@ -61,7 +61,7 @@
       <tr  *ngFor="let recipe of recipesList" >
         <td>{{recipe.name  }}</td>
         <td>{{recipe.price }}</td>
-        <td class=" col-2" >
+        <td class=" col-2 position-relative" >
            <!-- <img *ngIf="recipe.imagePath"  [src]="baseUrl+recipe.imagePath" alt="xx" class="w-25"> -->
 
            <img *ngIf="recipe.imagePath"
@@ -71,6 +71,8 @@
            <img *ngIf="!recipe.imagePath"
             src="../../../../assets/img/notfoundFood.jpeg"
            class="w-50" alt="xx" >
+
+           <!-- <i class="fa-solid fa-heart position-absolute top-0 end-0 p-2"></i> -->
          </td>
 
         <td>{{recipe.tag.name}}</td>
