--- a/src/app/dashboard/components/delete-item/delete-item.component.html
+++ b/src/app/dashboard/components/delete-item/delete-item.component.html
@@ -1,7 +1,7 @@
-<div class="container p-5 ">
+<div class="container p-2 ">
 
   <div class="m-auto text-center position-relative p-1">
-      <img src="../../../../assets/img/delete-img.svg" alt="xx" class="w-50">
+      <img src="../../../../assets/img/delete-img.svg" alt="xx" class="col-4">
       <button class="position-absolute top-0 end-0 bg-transparent"  matDialogClose  (click)=" onCloseDialog()">
         <i class="fa-solid fa-xmark  close-icon "   ></i>
       </button>
